fixed vertical layout on mobile viewport

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 :root {
   --dark-grey: #242742;
   --orange: #ff6155;
+  --background: #36384d;
 }
 
 *,
@@ -20,12 +21,11 @@ html {
 }
 
 body {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgba(171, 99, 75, 0.2);
+  background-color: var(--background);
 }
 
 p {
@@ -40,12 +40,11 @@ li {
 }
 
 .container {
-  height: 82rem;
-  border-radius: 3rem;
+  border-bottom-left-radius: 3rem;
+  border-bottom-right-radius: 3rem;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
   background-color: #fff;
-  margin-bottom: 1rem;
 }
 
 .signup {
